[package]
name = "cycling-analyzer-metrics"
version = "0.1.0"
edition = "2024"

[dependencies]
# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Web server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
